// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersList View component should renders correctly 1`] = `
<Fragment>
  <Styled(Text)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs16"
      fontWeight="extrabold"
      margin={null}
      numberOfLines={null}
      text="lbl_orders_heading"
      textDecoration={null}
    />
  </Styled(Text)>
  <Styled(View) />
  <RecentOrders
    componentProps={Object {}}
    handleComponentChange={[Function]}
    labels={Object {}}
    ordersListItems={Object {}}
  />
</Fragment>
`;

exports[`OrdersList View component should renders correctly 2`] = `
<Fragment>
  <Styled(Text)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs16"
      fontWeight="extrabold"
      margin={null}
      numberOfLines={null}
      text="lbl_orders_heading"
      textDecoration={null}
    />
  </Styled(Text)>
  <Styled(View) />
  <RecentOrders
    componentProps={Object {}}
    handleComponentChange={[Function]}
    labels={Object {}}
    ordersListItems={
      Array [
        Object {
          "currencySymbol": "$",
          "isBOSSOrder": false,
          "isCanadaOrder": false,
          "isEcomOrder": true,
          "orderDate": "Oct 4, 2019",
          "orderNumber": "7000037172",
          "orderStatus": "lbl_orders_statusNa",
          "orderTotal": "$24.95",
          "orderTracking": "N/A",
          "orderTrackingUrl": "https://childrensplace.narvar.com/childrensplace/tracking/ups?order_number=7000037172&order_date=2019-10-04T07:22:00-04:00&dzip=10036&locale=en_US&type=p",
        },
        Object {
          "currencySymbol": "$",
          "isBOSSOrder": false,
          "isCanadaOrder": false,
          "isEcomOrder": true,
          "orderDate": "Oct 4, 2019",
          "orderNumber": "7000036213",
          "orderStatus": "lbl_orders_statusNa",
          "orderTotal": "$83.45",
          "orderTracking": "N/A",
          "orderTrackingUrl": "https://childrensplace.narvar.com/childrensplace/tracking/ups?order_number=7000036213&order_date=2019-10-04T07:17:00-04:00&dzip=10036&locale=en_US&type=p",
        },
      ]
    }
  />
  <PastOrders
    componentProps={Object {}}
    handleComponentChange={[Function]}
    labels={Object {}}
    ordersListItems={
      Array [
        Object {
          "currencySymbol": "$",
          "isBOSSOrder": false,
          "isCanadaOrder": false,
          "isEcomOrder": true,
          "orderDate": "Oct 4, 2019",
          "orderNumber": "7000037172",
          "orderStatus": "lbl_orders_statusNa",
          "orderTotal": "$24.95",
          "orderTracking": "N/A",
          "orderTrackingUrl": "https://childrensplace.narvar.com/childrensplace/tracking/ups?order_number=7000037172&order_date=2019-10-04T07:22:00-04:00&dzip=10036&locale=en_US&type=p",
        },
        Object {
          "currencySymbol": "$",
          "isBOSSOrder": false,
          "isCanadaOrder": false,
          "isEcomOrder": true,
          "orderDate": "Oct 4, 2019",
          "orderNumber": "7000036213",
          "orderStatus": "lbl_orders_statusNa",
          "orderTotal": "$83.45",
          "orderTracking": "N/A",
          "orderTrackingUrl": "https://childrensplace.narvar.com/childrensplace/tracking/ups?order_number=7000036213&order_date=2019-10-04T07:17:00-04:00&dzip=10036&locale=en_US&type=p",
        },
      ]
    }
  />
</Fragment>
`;
